添加热更新,fly.js

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
     <meta name="renderer" content="webkit">
     <title></title>
     <script src="https://cdn.bootcss.com/vue/2.5.13/vue.min.js"></script>
-    <script src="https://cdn.bootcss.com/axios/0.17.1/axios.min.js"></script>
+    <script src="https://unpkg.com/flyio/dist/fly.min.js"></script>
 </head>
 
 <body>
