--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,11 +6,12 @@
     <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="renderer" content="webkit">
     <script src="https://cdn.bootcss.com/vue/2.5.13/vue.min.js"></script>
-    <script src="https://cdn.bootcss.com/axios/0.17.1/axios.min.js"></script>
+    <script src="https://unpkg.com/flyio/dist/fly.min.js"></script>
 </head>
 
 <body>
     <div id="app"></div>
+    <script src="./static/js/vendor.dll.js"></script>
 </body>
 
 </html>
